--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "personal-project",
+  "main": "server/",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
