--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.1.2",
     "redux": "^4.0.4",
     "redux-promise-middleware": "^6.1.1",
-    "sass": "^1.22.12"
+    "sass": "^1.22.12",
+    "twilio": "^3.35.0"
   },
   "scripts": {
     "start": "react-scripts start",
