--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "firebase": "^7.0.0",
     "massive": "^6.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
